<resources>
    <string name="app_name">¡VTubers Trivia!</string>
    <string name="gameTitle">¿Sabes todo acerca de los VTubers?</string>
    <string name="jugar">Jugar</string>
    <string name="rejugar">Volver a jugar</string>
    <string name="menu">Menú principal</string>
    <string name="ajustes">Ajustes</string>
    <string name="fondo_principal">fondo de pantalla del menu principal</string>
    <string name="fondo_ajustes">fondo de pantalla del menu ajustes</string>
    <string name="play_stop">Parar/Reanudar</string>
    <string name="n_mero_de_preguntas">Número de preguntas</string>
    <string name="_15">15</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resultado">Resultado</string>
    <string name="aviso_sin_nombre">¡Si no asignas un nombre de usuario no podrás guardar la puntuación!\nTu nombre será tu VTuber de fondo</string>
    <string name="continuar_sin_nombre">Continuar igualmente</string>
    <string name="cambiar_nombre">Asignar usuario</string>
</resources>